# GameOfLife

./: CMakeLists.txt  README.md  boundaryCells.c  boundaryCells.h  gol.c  gol.h  io.c  io.h  main.c  makefile  malloc.h  node.c  node.h  stats.c  stats.data  stats.h  tests.sh  types.h  utils.h  viewer.sh  world.c  world.h
doc/: readme.md  results.md
gnuplot/: plot.gnu
